--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
-
 html {
+  --color-1: #ffffff;
+  --color-1-main: #7700ff;
+  --color-1-bg: rgb(57, 34, 102);
+
+  --color-2-body:#686868;
+  --color-2-bg: #ffffff;
   scroll-behavior: smooth;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
+
+}
+
+
+
+
+.dark {
+  --color-1: #ffffff;
+  --color-1-main: #8400ff;
+  --color-1-bg: rgb(102, 31, 178);
+
+  --color-2-body:#ffffff;
+  --color-2-bg: #404040;
 }
 
 i{
@@ -12,10 +30,11 @@ i{
 
 
 body {
-  background: #ffffff;
+  background: var(--color-2-bg);
 }
 
 .banner{
+ 
     z-index: 0;
     position:absolute;
     top:0px;
@@ -67,27 +86,34 @@ header {
     left: 0;
     width: 100%;
     z-index: 1000;
-    background: #ffffff;
+    background: var( --color-2-bg);
     padding: 20px;
     text-align: right;
-    border-bottom: 1px solid #5f00cb;
+    border-bottom: 1px solid var(--color-1-main);
  }
 
 nav ul{
       margin-right: 40px;
 }
 
-nav li{
+#options{
+  text-align: right;
+}
+
+header div, nav li{
       display: inline;
 }
 
+header i{
+color:var(--color-1-main);
 
+}
 
 header nav a {
     display: inline-block;
     padding: 10px 20px;
     font-size: 1.2rem;
-    color: #5f00cb;
+    color: var( --color-2-body);
     border-radius: 5px;
     letter-spacing: 0.5px;
     font-weight: semi-bold;
@@ -101,8 +127,8 @@ header nav a:hover{
 
 
 header nav .active{
-    background-color: #4304f1c0;
-    color: #ffffff;
+    background-color: var(--color-1-main);
+    color: var(--color-1);
     transition: 0.5s ease-out;
     transform: scale(1.04);
 }
@@ -112,22 +138,22 @@ header nav .active{
 
 .lang-list {
 	display: inline;
-  background-color: #ffffff;
+  background-color: var(--color-2-bg);
 	min-width: 10%;
-  padding: 8px 16px;
+  padding: 5px 12px;
   font-size: 1.2rem;
-  color: #461db8ce;
+  color: var( --color-2-body);
   border-radius: 5px;
   letter-spacing: 0.5px;
 	border: none;
 	cursor: pointer;
-  margin-right: 52px;
-  border: 1px solid #3103adc0;
+  margin-left: 12px;
+  margin-right: 28px;
+  border: 1px solid var(--color-1-main);
   }
   
   
   .lang-list option {
-	color: rgb(83, 45, 146);
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
@@ -140,6 +166,105 @@ header nav .active{
     
 
 
+
+
+
+
+
+
+
+
+
+
+  header label {
+    display: inline-flex;
+    width: 75px;
+    height: 35px;
+    justify-content: space-between;
+    margin-right: 13%;
+    align-items: center;
+    padding: 0 6px;
+    background: #120a6c;
+    border-radius: 50px;
+    cursor: pointer;
+    position: relative;
+  }
+
+header label:hover{
+  transform: scale(1.1);
+}
+
+  header label i {
+    font-size: 18px;
+  }
+  header label .fa-sun {
+    color: gold;
+    transition: 0.8s;
+    opacity: 1;
+  }
+  header label .fa-moon {
+    color: #fff;
+    opacity: 0;
+    transition: 0.8s;
+  }
+
+
+  header label .fa-sun {
+    transform: translateX(43px);
+  }
+
+  header label .ball {
+    position: absolute;
+    display: block;
+    width: 25px;
+    height: 25px;
+    top: 5px;
+    left: 5px;
+    background: #fff;
+    border-radius: 50%;
+    transition: 0.8s;
+  }
+
+header label {
+  transition: 0.3s;
+}
+header input:checked + label {
+  background: var(--color-1-main);
+}
+header input:checked + label .ball {
+  background: #222;
+  transform: translateX(50px);
+}
+header input {
+  display: none;
+}
+
+
+
+header input:checked + label .fa-sun {
+    transform: translateX(43px);
+    opacity: 0;
+  }
+  header label .fa-moon {
+    transform: translateX(-43px) ;
+  }
+  header input:checked + label .fa-moon {
+    transform: translateX(0), rotate(0);
+    opacity: 1;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+  
   
 section {
   min-height: 100vh;
@@ -149,38 +274,43 @@ section {
 }
 
 section:nth-child(1) {
-  color: #5e5e5e;
+  color: var( --color-2-body);
 }
 section:nth-child(2) {
-  color: #ffffff;
-  background-color:#3a03d1c0;
+  color: var(--color-2-bg);
+  background: url(../img/banner3.png)
 }
   
 section:nth-child(3) {
-  color:#5e5e5e;
+  color: var( --color-2-body);
 }
 
 section:nth-child(4) {
-  color: #ffffff;
-  background-color:#3a03d1c0;
+  color: var(--color-2-bg);
+  background: url(../img/banner3.png)
 }
 
 section:nth-child(5) {
-  color:#5e5e5e;
+  color: var( --color-2-body);
 }
 
 
 section:nth-child(1) h2 {
-  color:#5f00cb;
+  color:var(--color-1-main);
+}
+section:nth-child(2) h2 {
+  color:var( --color-1);
 }
 
-
 section:nth-child(3) h2 {
-  color:#5f00cb;
+  color:var(--color-1-main);
+}
+section:nth-child(4) h2 {
+  color:var( --color-1);
 }
 
 section:nth-child(5) h2 {
-  color:#5f00cb;
+  color:var(--color-1-main);
 }
 
 section .container {
@@ -212,16 +342,15 @@ section .text-container {
 section .text-container .text-box {
   margin: 20px;
   padding: 20px;
-  min-width: 240px;
+  width: 250px;
   height: 235px;
-  background: #ffffff0c;
+  background: var( --color-2-bg);
   border-radius: 20px;
 
 }
 
 
-section .text-container .text-box:hover, 
-section .text-container .text-box h3:hover{
+section .text-container .text-box:hover{
   transform: scale(1.05);
 }
 
@@ -241,7 +370,7 @@ section .text-container .text-box h3 {
 
 
 section .text-container .text-box p {
-  font-size: 12px;
+  font-size: 18px;
   text-align: center;
   margin-bottom: 10px;
 }
@@ -287,23 +416,45 @@ section .text-container .text-box div{
 
 .header-projects li{
   display: inline-block;
+  color: var(--color-1);
   margin-right: 13px;
   margin-top: 12px;
   margin-bottom: 7px;
 }
 
 
-.imgprojects{
-  height: 110px;
-  margin-bottom: 10px;
-  border-radius: 12px;
-  background-color: #ffffff0c;
+.text-box{
+  background-color: var( --color-2-bg);
+  box-shadow: 0px 8px 15px -4px rgba(46,46,46,0.75);
+  -webkit-box-shadow: 0px 8px 15px -4px rgba(46,46,46,0.75);
+  -moz-box-shadow: 0px 8px 15px -4px rgba(46,46,46,0.75);
 }
 
-.img-div:hover .imgprojects{
-  background-color: #616161b9;
-  opacity: 0.2;
+.text-box-description{
+  font-size: 14px !important;
+  color:  var( --color-2-body);
+  margin-bottom: 15px;
 }
+
+
+
+.text-box h3{
+  color:  var( --color-2-body);
+  font-weight: 200;
+
+}
+
+.imgprojects{
+  height: 110px;
+  border: 1px solid #5e5e5e4f;;
+  margin-bottom: 10px;
+  border-radius: 12px;
+  box-shadow: 0px 7px 10px -4px rgba(46,46,46,0.75);
+  -webkit-box-shadow: 0px 7px 10px -4px rgba(46,46,46,0.75);
+  -moz-box-shadow: 0px 7px 10px -4px rgba(46,46,46,0.75);
+}
+
+
 
 .img-div {
   z-index: 1;
@@ -317,55 +468,77 @@ section .text-container .text-box div{
 .img-div a{
   opacity: 0;
   position: absolute;
+  padding-top:  8px;
   padding-left: 8px;
   padding-right: 8px;
-  background-color:#ffffff;
-  color:  #5f00cb;
+  background-color:var( --color-2-bg);
+  border: 2px solid #7b7b7b82 ;
+  color:  var(--color-1-main);
   font-size: 16px;
   border-radius: 10px;
   cursor: pointer;
-  left: 7%;
-  bottom: 58%;
-  transform: scale(.9);
+  left: 3%;
+  bottom: 55%;
+  transform: scale(0.76);
+  box-shadow: 0px 5px 8px -4px rgba(46,46,46,0.75);
+  -webkit-box-shadow: 0px 5px 8px -4px rgba(46,46,46,0.75);
+  -moz-box-shadow: 0px 5px 8px -4px rgba(46,46,46,0.75);
 }
 
 
-.img-div:hover a {
+.text-box:hover .imgprojects{
+  opacity: 0.08;
+  box-shadow: 0px 0px 0px 0px var(--color-2-bg);
+}
+
+
+.text-box:hover a {
   opacity: 1;
 }
 
+
+
 .img-div a:hover{
-  transform: scale(.95);
-  background-color:#5f00cb;
-  color:  #ffffff;
+  transform: scale(.74);
+  background-color:var( --color-1-bg);
+  color:  var(--color-1);
 
 }
 
 
 .img-div a p{
   display: inline-block;
+  color:  var( --color-2-body);
   
 }
 
-
+.img-div a:hover p{
+  color: var(--color-1) !important;
+}
 
 .icon-section{
   margin-top: 6px;
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid  var( --color-2-body);
+  color:  var( --color-2-body);
+}
+
+.icon-div:hover{
+  transform: scale(1.05);
+  color:var(--color-1-main);
 }
 
 
 .more{
+  
   width: 80px !important;
   left: 7% !important;
-  bottom: 22% !important;
-  padding-top: 7px !important;
+  bottom: 12% !important;
 
 }
 
 
 #more-portfolio{
-  bottom: 40% !important;
+  bottom: 32% !important;
 }
 
 .more i, .more p{
@@ -374,23 +547,6 @@ section .text-container .text-box div{
 
 
 
-.aboutme{
-    margin:11%;
-    margin-top: 11%;
-    position: relative; 
-    display: inline-block;
-}
-
-
-
-
-.aboutme p{
-    z-index: 1;
-    font-size: 2em;
-    line-height: 1.2em;
-    color: #FFFFFF;
-    text-shadow:  1px 1px #34036dbd;
-}
 
 
 
@@ -398,6 +554,18 @@ section .text-container .text-box div{
     width: 20%;
     float:left;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #contact p, #contact a{
@@ -410,7 +578,7 @@ section .text-container .text-box div{
 #mail{
 display: inline;
   text-decoration: none;
-color: #803fcae7;
+color: var(--color-1-main);
 font-weight: bold;
 }
 
@@ -428,13 +596,13 @@ font-weight: bold;
   margin-right:70px;
 }
 
-form{
+.form-container{
   margin-top: 15px;
   display: inline-block;
   vertical-align: middle;
   width:380px;
   height: 490px;
-  border: 1px solid #4a3683;
+  border: 1px solid  var(--color-1-main);
   padding:6px;
   border-radius: 15px;
   box-shadow: 7px 5px 12px -1px rgba(0,0,0,0.75);
@@ -449,30 +617,38 @@ form :nth-child(1){
 
 
 .input-contacto{
+  background: var(--color-2-bg);
   vertical-align: middle;
-  border: 1px solid #000000a9; ;
+  color:var( --color-2-body);
+  border: 1px solid  var( --color-2-body);
+  font-family: 'Montserrat', sans-serif;
   padding: 10px;
   width: 80%;
   border-radius: 5px;
-  margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 5px;
+
 }
 
 
 
 .input-contacto::placeholder{
   font-family: 'Montserrat', sans-serif;
-  color: #5e5e5e;
+  color:  var( --color-2-body);
 }
 
 
 
 .contact-label{
+  background: var(--color-2-bg)!important;
+  position: relative;
   display: block;
-  text-align: left;
-  margin-left:30px;
-  font-size: small;
-  margin-bottom: 0;
+  top: 14px;
+  left: 38px;
+  padding: 3px;
+  width: fit-content;
+  font-size: 11px;
+  color: var(--color-2-body);
+  font-weight: 500;
 }
 
 
@@ -482,42 +658,89 @@ form :nth-child(1){
 .input-contacto:focus{
   outline: none !important;
   font-family: 'Montserrat', sans-serif;
-  border: 1.7px solid  #5f00cb;
+  border: 1.7px solid  var(--color-1-main);
 }
 
+
+.error-form{
+	border: 1.5px solid  #e48704;
+}
+
+
+.error-form:focus{
+	border: 1.7px solid  #e48704;
+}
+
+
+form span{
+	display: block;
+	color: #ea8b07;
+  font-weight: 600;
+	margin-top: 3px;
+  font-size: 12px;
+}
 
 
 
 
 .enviar{
   width: 40%;
+  position: relative;
+  top: 20px;
   padding: 15px 0;
   font-size: 18px;
   font-weight: bold;
-  color:white;
-  background-color:#4304f1c0;
+  color:var(--color-2-bg);
   border:none;
   border-radius: 5px;
   cursor:pointer;
   margin-bottom: 10px;
 }
 
-.enviar:hover{
-  background-color:#5f00cb;
+.enviar:enabled{
+  background-color:var(--color-1-main);
+}
+
+.enviar:enabled:hover{
+  background-color:var(--color-1-main);
   transform: scale(1.06);
 }
 
 
 
+.enviar:disabled{
+  background-color: #979797;
+}
+
+
+.fadeOut{
+  opacity: 0;
+}
+
+.hide{
+ display: none;
+}
+
+#message-success i{
+  margin-top: 100px;
+  margin-bottom: 20px;
+  display: block;
+  color: #0ddf48;
+  font-size: 140px;
+}
+
+#message-success p{
+  margin: 20px;
+}
 
 footer{
   text-align: center;
-  background: #4a3683;
+  background: var(--color-1-bg);
   padding:40px;
 }
 
 .copyright{
-  color:#FFFFFF;
+  color:var(--color-1);
   font-size: 13px;
   margin:20px;
 
