--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,13 @@ a {
   }
 
 .nav-options{
-  text-align: left;
-  position: absolute;
-  left: 10%;
+  display: inline-block;
+  margin-right: 40px;
 }
 
+.nav-options li{
+  display: inline-block;
+  }
 
 
 header li{
@@ -126,7 +128,7 @@ header {
  }
 
 nav ul{
-      margin-right: 40px;
+     display: inline-block;
 }
 
 #options{
@@ -621,7 +623,7 @@ section .text-container .text-box div{
 
 }
 
-#home i, #about i{
+.arrow-container i{
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -633,7 +635,11 @@ section .text-container .text-box div{
 
 .arrow-container{
   display: block !important;
-  margin-top: 60px;
+  margin-top: 70px;
+}
+
+#skills .arrow-container{
+  margin-top: 20px;
 }
 
 
